 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Finnish, French, Galician,
     Greek, Hungarian, Italian, Polish, Portuguese (Brazil), Russian, Spanish,
     Swedish, Valencian
   * updates fonts: DejaVuSans (2.21)
 * map editor:
   * fixed a bug when two dimensions of a map were modified, the editor 
     could crash (bug #10216)
 * multiplayer:
   * revised maps: Den of Onis, Silverhead Crossing, Sulla's Ruins,
     Weldyn Channel, Blue Water Province
   * new multiplayer scenario added: Dark Forecast, random survival for up to
     two players
   * removed option to enforce female gender on side leaders, replaced with a
     gender choice combo-box in the MP side setup UI (client and host), which
     can choose between random, male, and female, when available.
   * the server sends a periodical 'ping' to all players to detect ghosts
   * implemented reloading of the server config on SIGHUP
 * sound
   * "Legends of the North" (legends_of_the_north.ogg) moved from NR to mainline
 * units:
   * created female variation for L3 Necromancer
   * balancing changes:
     * increased the movement points over tundra (snow) and deep water from 1
       to 2 for 'drakefly'
     * added the 'fearless' trait to the Ghoul line
 * user interface:
   * changed the mute hotkey from ctrl-m to ctrl-alt-m
   * renamed "Advanced Mode" button on graphics preferences to "Change Resolution"
   * renamed "Advanced Mode" button on sound preferences to "Advanced Options",
     and "Normal Mode" to "Standard Options"
 * WML engine:
   * extended [store_side] behavior
   * new key "contains=" in [variable] conditions to check the presence of a 
     substring in a variable value
   * new key "variation=" in [move_unit_fake] statements to add the possibility
     of making a fake unit look like one of its variation while moving - this
     also reflects in a change to the MOVE_UNIT macro, which now can use gender
     and variation too.