@@ -31,6 +31,8 @@ Version 1.3.9+svn:
   * map editor:
     * Fixed a bug, when two dimensions of a map were modified, the editor 
       could crash.
+    * Fixed a bug when shifting the map, the starting positions weren't
+      updated correctly.
 
   * Multiplayer
     * Revised maps: Den of Onis, Silverhead Crossing, Sulla's Ruins,
